Clean up and correction of blank config file

--- a/settings.blank.cfg
+++ b/settings.blank.cfg
@@ -1,2 +1,3 @@
-/path/to/directory/before.txt 
-/path/to/directory/after.txt
+#!/bin/bash
+BEFORE="/path/to/directory/before.txt"
+AFTER="/path/to/directory/after.txt"
